--- a/src/Views/Preference.xaml
+++ b/src/Views/Preference.xaml
@@ -58,6 +58,7 @@
                 <RowDefinition Height="28"/>
                 <RowDefinition Height="28"/>
                 <RowDefinition Height="28"/>
+                <RowDefinition Height="28"/>
                 <RowDefinition Height="8"/>
                 <RowDefinition Height="36"/>
                 <RowDefinition Height="28"/>
@@ -135,21 +136,27 @@
                 Grid.Row="5" Grid.Column="1"
                 Content="{StaticResource Text.Preference.AutoFetch}"
                 IsChecked="{Binding Source={x:Static models:Preference.Instance}, Path=General.AutoFetchRemotes, Mode=TwoWay}"/>
-                
+
+            <!-- Restore Windows -->
+            <CheckBox
+                Grid.Row="6" Grid.Column="1"
+                Content="{StaticResource Text.Preference.RestoreTabs}"
+                IsChecked="{Binding Source={x:Static models:Preference.Instance}, Path=Restore.IsEnabled, Mode=TwoWay}"/>
+
             <!-- Git Group -->
             <TextBlock
-                Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
+                Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2"
                 Text="{StaticResource Text.Preference.Git}"
                 FontSize="16" FontWeight="DemiBold"
                 Foreground="{StaticResource Brush.FG2}"/>
                 
             <!-- Git Executable Path -->
             <TextBlock 
-                Grid.Row="8" Grid.Column="0" 
+                Grid.Row="9" Grid.Column="0" 
                 Text="{StaticResource Text.Preference.Git.Path}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
-            <Grid Grid.Row="8" Grid.Column="1">
+            <Grid Grid.Row="9" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
@@ -172,11 +179,11 @@
                 
             <!-- Default Clone Dir -->
             <TextBlock 
-                Grid.Row="9" Grid.Column="0" 
+                Grid.Row="10" Grid.Column="0" 
                 Text="{StaticResource Text.Preference.Git.Dir}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
-            <Grid Grid.Row="9" Grid.Column="1">
+            <Grid Grid.Row="10" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
@@ -199,36 +206,36 @@
                 
             <!-- User -->
             <TextBlock 
-                Grid.Row="10" Grid.Column="0" 
+                Grid.Row="11" Grid.Column="0" 
                 Text="{StaticResource Text.Preference.Git.User}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
             <controls:TextEdit
-                Grid.Row="10" Grid.Column="1"
+                Grid.Row="11" Grid.Column="1"
                 Height="24"
                 Text="{Binding ElementName=me, Path=User, Mode=TwoWay}"
                 Placeholder="{StaticResource Text.Preference.Git.User.Placeholder}"/>
 
             <!-- Email -->
             <TextBlock 
-                Grid.Row="11" Grid.Column="0" 
+                Grid.Row="12" Grid.Column="0" 
                 Text="{StaticResource Text.Preference.Git.Email}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
             <controls:TextEdit
-                Grid.Row="11" Grid.Column="1"
+                Grid.Row="12" Grid.Column="1"
                 Height="24"
                 Text="{Binding ElementName=me, Path=Email, Mode=TwoWay}"
                 Placeholder="{StaticResource Text.Preference.Git.Email.Placeholder}"/>
                 
             <!-- CRLF -->
             <TextBlock 
-                Grid.Row="12" Grid.Column="0" 
+                Grid.Row="13" Grid.Column="0" 
                 Text="{StaticResource Text.Preference.Git.CRLF}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
             <ComboBox 
-                Grid.Row="12" Grid.Column="1" 
+                Grid.Row="13" Grid.Column="1" 
                 Height="24"
                 ItemsSource="{Binding Source={x:Static models:CRLFOption.Supported}}"
                 SelectedValuePath="Value"
@@ -245,19 +252,19 @@
 
             <!-- Merge Tool Group -->
             <TextBlock
-                Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="2"
+                Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2"
                 Text="{StaticResource Text.Preference.Merger}"
                 FontSize="16" FontWeight="DemiBold"
                 Foreground="{StaticResource Brush.FG2}"/>
                 
             <!-- Merge Tool Type -->
             <TextBlock 
-                Grid.Row="15" Grid.Column="0" 
+                Grid.Row="16" Grid.Column="0" 
                 Text="{StaticResource Text.Preference.Merger.Type}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
             <ComboBox 
-                Grid.Row="15" Grid.Column="1" 
+                Grid.Row="16" Grid.Column="1" 
                 Height="24"
                 ItemsSource="{Binding Source={x:Static models:MergeTool.Supported}}"
                 DisplayMemberPath="Name"
@@ -267,11 +274,11 @@
 
             <!-- Merge Tool Executable Path -->
             <TextBlock 
-                Grid.Row="16" Grid.Column="0" 
+                Grid.Row="17" Grid.Column="0" 
                 Text="{StaticResource Text.Preference.Merger.Path}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
-            <Grid Grid.Row="16" Grid.Column="1">
+            <Grid Grid.Row="17" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
@@ -294,12 +301,12 @@
                 
             <!-- Merge Tool Command -->
             <TextBlock 
-                Grid.Row="17" Grid.Column="0"
+                Grid.Row="18" Grid.Column="0"
                 Text="{StaticResource Text.Preference.Merger.Cmd}" 
                 HorizontalAlignment="Right" 
                 Margin="0,0,6,0"/>
             <TextBlock
-                Grid.Row="17" Grid.Column="1"
+                Grid.Row="18" Grid.Column="1"
                 x:Name="txtMergeCmd"
                 Text="{Binding ElementName=me, Path=MergeCmd}"
                 Foreground="{StaticResource Brush.FG2}"/>
