--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -91,6 +91,8 @@
     <sys:String x:Key="Text.Configure.User.Placeholder">应用于本仓库的用户名</sys:String>
     <sys:String x:Key="Text.Configure.Email">邮箱 ：</sys:String>
     <sys:String x:Key="Text.Configure.Email.Placeholder">邮箱地址</sys:String>
+    <sys:String x:Key="Text.Configure.Proxy">代理 ：</sys:String>
+    <sys:String x:Key="Text.Configure.Proxy.Placeholder">HTTP网络代理</sys:String>
 
     <sys:String x:Key="Text.CreateBranch">新建分支</sys:String>
     <sys:String x:Key="Text.CreateBranch.Title">创建本地分支</sys:String>
